2001-12-31  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_pollio.c (bk_polling_io_data_destroy): make sure that ptr
	exists before freeing.

2001-12-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: <netinet/if_ether.h> if no <net/ethernet.h>

2001-12-27  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_url.c (bk_url_parse): missed a few critical search
	stopping characters in the fuzzy logic code. 

2001-12-27  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/Makefile ($(GROUPTOP)/include/libbk_autoconf.h): create link
	to bkmk-generated file

	* include/libbk_include.h: use BK_MINGW, autoconf HAVE_ defines

	* include/libbk.h: include libbk_autoconf.h

	* include/Makefile (BK_PUBLIC_INC): install libbk_autoconf.h

2001-12-21  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_string.c: constifying

2001-12-21  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_url.c: Brand new rfc2396 compliant url parsing code.
	(bk_url_parse): Free up apparently unset data because it is not in
	fact unset :-)

2001-12-20  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_fileutils.c: Many many lock related changes. Locks now
	working. Interface change to allow the discriminatin between "lock
	held" failure and general failure. Admin file removed when empty.

2001-12-19  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_run.c (bk_run_on_demand_add): Set brof key (DOH!)
	(bk_run_on_demand_remove): Actutally destroy brof you are removing.

	* lib/b_pollio.c (bk_polling_io_create): Sigh. Fully initialize
	structure (despite memset()) in order to pacify insight.
	(bk_polling_io_close): Lingering close.
	(bk_polling_io_close): Close out ioh too.
	(polling_io_ioh_handler): Don't destroy bpi if asked not too
	(lingering close).
	(bk_polling_io_data_destroy): We only need to destroy one vptr.

	* lib/b_ioh.c (ioh_execute_cmds): Make sure you clear and destroy
	the dll regardless of content of nodes.
