@@ -1,3 +1,7 @@
+2002-01-02  James Tanis  <jtt@winwood.sysdetect.com>
+
+	* lib/b_nvmap.c (bk_nvmap_value2name): Functions to map strings to values.
+
 2001-12-31  James Tanis  <jtt@winwood.sysdetect.com>
 
 	* lib/b_pollio.c (bk_polling_io_data_destroy): make sure that ptr
